style changes in order summary

--- a/order-summary-component/style.css
+++ b/order-summary-component/style.css
@@ -47,7 +47,8 @@ p {
 }
 
 .hero-image {
-    width: 100%;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 
 /* Flex */
@@ -118,7 +119,7 @@ p {
 .card {
     max-width: 450px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .summary {
