--- a/expense-chart-challenge/src/components/Balance/Balance.css
+++ b/expense-chart-challenge/src/components/Balance/Balance.css
@@ -5,6 +5,7 @@
     background-color: var(--soft-red);
     padding: 20px;
     color: #fff;
+    border-bottom: 1px solid grey;
 }
 
 .balance h3 {
