--- a/expense-chart-challenge/src/components/Expenses/Expense.css
+++ b/expense-chart-challenge/src/components/Expenses/Expense.css
@@ -24,9 +24,15 @@
 
 .expenses__percent {
     font-weight: bold;
+    text-align: right;
 }
 
 .expenses__chart {
-    margin: 3rem 0;
+    margin: 1.5rem 0;
+}
+
+.divider {
+  border-top: 1px solid #ccc;
+  margin-bottom: 1.5rem;
 }
 
