--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -27,26 +27,25 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
-section {
-  max-width: 100%;
-  width: 320px;
+.qrCode {
+  max-width: 20rem;
   border-radius: 20px;
   background: var(--white);
   padding: 1rem 1rem 2.5rem;
   text-align: center;
 }
 
-.improve {
+.qrCode__heading {
   color: var(--slate-900);
   margin-bottom: 1rem;
   font-weight: 700;
   font-size: 0.938rem;
 }
 
-.skills {
+.qrCode__subtext {
   color: var(--slate-500);
   font-weight: 400;
   font-size: 0.938rem;
