--- a/blog-preview-card/style.css
+++ b/blog-preview-card/style.css
@@ -88,7 +88,7 @@ body {
   margin-right: 0.75rem;
 }
 
-.blogCard__list h3 {
+.blogCard__list p {
   font-size: 0.875rem;
   font-weight: bold;
   color: var(--gray-950);
