--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 :root {
   --white: #fff;
   --slate-300: #d5e1ef;
@@ -7,20 +5,85 @@
   --slate-900: #1f314f;
 }
 
+/* Reset Styles */
+/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul,
+ol {
+  list-style: none;
   padding: 0;
 }
 
-img {
-  max-width: 100%;
-  margin-bottom: 1.375rem;
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
 }
 
+/* Set core body defaults */
 body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* Qr Code styles */
+main {
   font-family: "Outfit", serif;
   background: var(--slate-300);
   display: flex;
@@ -28,6 +91,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  padding: 0 5px;
 }
 
 .qrCode {
@@ -38,11 +102,17 @@ body {
   text-align: center;
 }
 
+.qrCode__img {
+  margin: 0 auto;
+  margin-bottom: 1.375rem;
+  border-radius: 10px;
+}
+
 .qrCode__heading {
   color: var(--slate-900);
   margin-bottom: 1rem;
   font-weight: 700;
-  font-size: 0.938rem;
+  font-size: 1.375rem;
 }
 
 .qrCode__subtext {
