changed minHeight to 100svh, padding to 15px (qr-code-component)

--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -90,8 +90,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  padding: 0 5px;
+  min-height: 100svh;
+  padding: 15px;
 }
 
 .qrCode {
